@@ -1,4 +1,7 @@
-// Copyright 2020-2024 The NATS Authors
+// Copyright 2020-2025 The NATS Authors
+//
+// Modifications Copyright 2025-2026 Synadia Communications, Inc.
+//
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at:
@@ -13,12 +16,19 @@
 
 package io.nats.json;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
+import org.apache.commons.codec.binary.Base64;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 
+import java.net.URLDecoder;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+
+/**
+ * Utilities for encoding, i.e., Base64, URI and JSON
+ */
 public abstract class Encoding {
+
     private Encoding() {}  /* ensures cannot be constructed */
 
     /**
@@ -26,8 +36,8 @@ public abstract class Encoding {
      * @param input the input byte array to encode
      * @return the encoded byte array
      */
-    public static byte[] base64BasicEncode(byte[] input) {
-        return Base64.getEncoder().encode(input);
+    public static byte @NonNull [] base64BasicEncode(byte @NonNull [] input) {
+        return Base64.encodeBase64(input);
     }
 
     /**
@@ -35,8 +45,9 @@ public abstract class Encoding {
      * @param input the input byte array to encode
      * @return the encoded byte array
      */
-    public static String base64BasicEncodeToString(byte[] input) {
-        return Base64.getEncoder().encodeToString(input);
+    @NonNull
+    public static String base64BasicEncodeToString(byte @NonNull [] input) {
+        return Base64.encodeBase64String(input);
     }
 
     /**
@@ -44,9 +55,20 @@ public abstract class Encoding {
      * @param input the input byte array to encode
      * @return the encoded byte array
      */
-    public static String base64BasicEncodeToString(String input) {
-        return Base64.getEncoder()
-            .encodeToString(input.getBytes(StandardCharsets.UTF_8));
+    @NonNull
+    public static String base64BasicEncodeToString(@NonNull String input) {
+        return Base64.encodeBase64String(input.getBytes(StandardCharsets.UTF_8));
+    }
+
+    /**
+     * base64 url encode a byte array to a byte array
+     * @param input the input byte array to encode
+     * @param charset the charset of the input string
+     * @return the encoded byte array
+     */
+    @NonNull
+    public static String base64BasicEncodeToString(@NonNull String input, @NonNull Charset charset) {
+        return Base64.encodeBase64String(input.getBytes(charset));
     }
 
     /**
@@ -54,8 +76,8 @@ public abstract class Encoding {
      * @param input the input byte array to encode
      * @return the encoded byte array
      */
-    public static byte[] base64UrlEncode(byte[] input) {
-        return Base64.getUrlEncoder().withoutPadding().encode(input);
+    public static byte @NonNull [] base64UrlEncode(byte @NonNull [] input) {
+        return Base64.encodeBase64URLSafe(input);
     }
 
     /**
@@ -63,8 +85,9 @@ public abstract class Encoding {
      * @param input the input byte array to encode
      * @return the encoded byte array
      */
-    public static String base64UrlEncodeToString(byte[] input) {
-        return Base64.getUrlEncoder().withoutPadding().encodeToString(input);
+    @NonNull
+    public static String base64UrlEncodeToString(byte @NonNull [] input) {
+        return Base64.encodeBase64URLSafeString(input);
     }
 
     /**
@@ -72,10 +95,20 @@ public abstract class Encoding {
      * @param input the input byte array to encode
      * @return the encoded byte array
      */
-    public static String base64UrlEncodeToString(String input) {
-        return Base64.getUrlEncoder()
-            .withoutPadding()
-            .encodeToString(input.getBytes(StandardCharsets.UTF_8));
+    @NonNull
+    public static String base64UrlEncodeToString(@NonNull String input) {
+        return Base64.encodeBase64URLSafeString(input.getBytes(StandardCharsets.UTF_8));
+    }
+
+    /**
+     * base64 url encode a byte array to a byte array
+     * @param input the input byte array to encode
+     * @param charset the charset of the input string
+     * @return the encoded byte array
+     */
+    @NonNull
+    public static String base64UrlEncodeToString(@NonNull String input, @NonNull Charset charset) {
+        return Base64.encodeBase64URLSafeString(input.getBytes(charset));
     }
 
     /**
@@ -83,8 +116,8 @@ public abstract class Encoding {
      * @param input the input byte array to decode
      * @return the decoded byte array
      */
-    public static byte[] base64BasicDecode(byte[] input) {
-        return Base64.getDecoder().decode(input);
+    public static byte @NonNull [] base64BasicDecode(byte@NonNull [] input) {
+        return Base64.decodeBase64(input);
     }
 
     /**
@@ -92,8 +125,8 @@ public abstract class Encoding {
      * @param input the input string to decode
      * @return the decoded byte array
      */
-    public static byte[] base64BasicDecode(String input) {
-        return Base64.getDecoder().decode(input);
+    public static byte @NonNull [] base64BasicDecode(@NonNull String input) {
+        return Base64.decodeBase64(input);
     }
 
     /**
@@ -101,8 +134,20 @@ public abstract class Encoding {
      * @param input the input string to decode
      * @return the decoded string
      */
-    public static String base64BasicDecodeToString(String input) {
-        return new String(Base64.getDecoder().decode(input));
+    @NonNull
+    public static String base64BasicDecodeToString(@NonNull String input) {
+        return new String(Base64.decodeBase64(input), StandardCharsets.UTF_8);
+    }
+
+    /**
+     * base64 decode a base64 encoded string
+     * @param input the input string to decode
+     * @param charset the charset to use when decoding the decoded bytes to string
+     * @return the decoded string
+     */
+    @NonNull
+    public static String base64BasicDecodeToString(@NonNull String input, @NonNull Charset charset) {
+        return new String(Base64.decodeBase64(input), charset);
     }
 
     /**
@@ -110,8 +155,18 @@ public abstract class Encoding {
      * @param input the input byte array to decode
      * @return the decoded byte array
      */
-    public static byte[] base64UrlDecode(byte[] input) {
-        return Base64.getUrlDecoder().decode(input);
+    public static byte @NonNull [] base64UrlDecode(byte@NonNull [] input) {
+        return Base64.decodeBase64(input);
+    }
+
+    /**
+     * base64 url decode a byte array
+     * @param input the input byte array to decode
+     * @return the decoded byte array
+     */
+    @NonNull
+    public static String base64UrlDecodeToString(byte@NonNull [] input) {
+        return new String(Base64.decodeBase64(input));
     }
 
     /**
@@ -119,8 +174,8 @@ public abstract class Encoding {
      * @param input the input string to decode
      * @return the decoded byte array
      */
-    public static byte[] base64UrlDecode(String input) {
-        return Base64.getUrlDecoder().decode(input);
+    public static byte @NonNull [] base64UrlDecode(@NonNull String input) {
+        return Base64.decodeBase64(input);
     }
 
     /**
@@ -128,11 +183,18 @@ public abstract class Encoding {
      * @param input the input string to decode
      * @return the decoded string
      */
-    public static String base64UrlDecodeToString(String input) {
-        return new String(Base64.getUrlDecoder().decode(input));
+    @NonNull
+    public static String base64UrlDecodeToString(@NonNull String input) {
+        return new String(Base64.decodeBase64(input));
     }
 
-    public static String jsonDecode(String s) {
+    /**
+     * Decode a JSON string
+     * @param s the input string
+     * @return the decoded string
+     */
+    @NonNull
+    public static String jsonDecode(@NonNull String s) {
         int len = s.length();
         StringBuilder sb = new StringBuilder(len);
         for (int x = 0; x < len; x++) {
@@ -179,12 +241,25 @@ public abstract class Encoding {
         return sb.toString();
     }
 
-    public static String jsonEncode(String s) {
-        return jsonEncode(new StringBuilder(), s).toString();
+    /**
+     * Encode a JSON string
+     * @param s the input string
+     * @return the encoded string
+     */
+    @NonNull
+    public static String jsonEncode(@Nullable String s) {
+        return s == null ? "" : jsonEncode(new StringBuilder(), s).toString();
     }
 
-    public static StringBuilder jsonEncode(StringBuilder sb, String s) {
-        int len = s.length();
+    /**
+     * Encode a JSON string into a StringBuilder
+     * @param sb the target StringBuilder
+     * @param s the input string
+     * @return the encoded string as StringBuilder
+     */
+    @NonNull
+    public static StringBuilder jsonEncode(@NonNull StringBuilder sb, @Nullable String s) {
+        int len = s == null ? 0 : s.length();
         for (int x = 0; x < len; x++) {
             char ch = s.charAt(x);
             switch (ch) {
@@ -225,11 +300,12 @@ public abstract class Encoding {
         return sb;
     }
 
-    public static String uriDecode(String source) {
-        try {
-            return URLDecoder.decode(source.replace("+", "%2B"), "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return source;
-        }
+    /**
+     * Decode a URI
+     * @param source the input
+     * @return the decoded URI
+     */
+    public static String uriDecode(@NonNull String source) {
+        return URLDecoder.decode(source.replace("+", "%2B"), StandardCharsets.UTF_8);
     }
 }
